fix(modal):  stretch

--- a/src/assets/styles/blocks/_modal.scss
+++ b/src/assets/styles/blocks/_modal.scss
@@ -10,7 +10,10 @@
   border: none;
   padding: 0;
   place-items: center;
+  min-width: 100%;
   width: 100%;
+  min-height: 100dvh;
+  margin: 0;
 
   &[open] {
     display: grid;
